<resources>
    <string name="app_name">FaceBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--TODO: Newfeed Facebook 1-->
    <string name="New1">NXB Kim Dong </string>
    <string name="New1a">1d. Hanoi, VietNam.</string>
    <string name="New1b">[KIM DONG COMICS TOURAMENT]</string>
    <string name="New1c"> * Season 2/Vòng 3/Trận 6 * </string>
    <string name="New1d">
        *Trận đấu có kèm Give-ây Figure!...See More
    </string>
    <string name="New1e">11k Comments - 6.5K Shares</string>
    <string name="New1f">Comment</string>
    <string name="New1g">Share</string>
    <string name="New1h">Like</string>

    <!--TODO: Newfeed Facebook 2-->
    <string name="New2">Phòng Trọ Tây Hồ, Ba Đình, Hoàn Kiếm, Hà Nội - TC.Renting</string>
    <string name="New2a">NPha. 18h</string>
    <string name="New2b"> 175 lạc long quân 2,4-2,7tr full đồ khép kín tuỳ phòng đh nl máy giặt</string>
    <string name="New2c"> 457 xuân đỉnh 2,3tr fulll đồ ban công rộng</string>
    <string name="New2d">68 cầu giấy 2,7tr full đồ</string>
    <string name="New2e">TỰ DO , KO CHUNG CHỦ</string>
    <string name="New2f">GOỊ THEO SỐ : 0981235472</string>
    <string name="New2h">50 Comments - 5 Shares</string>

    <!--TODO: Newfeed Facebook 3-->
    <string name="New3">HLV Park Hang Seo - Đội Tuyển Việt Nam</string>
    <string name="New3b">Việt Nam tiến lên</string>
    <string name="New3a">21H</string>
    <string name="New3c">100 Comments - 20k Shares</string>

<!--    TODO: Newfeed Facebook 4-->
    <string name="New4">An Ninh Hôm Nay</string>
    <string name="New4a">23 H</string>
    <string name="New4b">HỒN THIÊNG ĐANG TÁI SINH</string>

    <string name="New4c"> Nhà thơ Tố Hữu nói lên tâm trạng của nhân dân Việt Nam thương tiếc Bác cũng như ông trời thương tiếc Bác vô hạn. Nhân dân Việt Nam đời đời ghi nhớ công ơn của Bác.</string>
    <string name="New4d"> Chủ Tịch Hồ Chí Minh vĩ đại sống mãi trong sự nghiệp của chúng ta.</string>
    <string name="New4e">100k Comments - 150k Shares</string>
<!--     TODO: Menu -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Menu">Menu</string>
    <string name="Market">Marketplace</string>
    <string name="Dating">Dating</string>
    <string name="Friends">Friends</string>
    <string name="Groups">Groups</string>
    <string name="Mem">Memories</string>
    <string name="Saved">Saved</string>
    <string name="Videos">Videos on Watch</string>
    <string name="Page">Pages</string>
    <string name="Events">Events</string>
    <string name="User">User Name</string>
    <string name="Seeprofile">See your profile</string>
    <string name="Jobs">Jobs</string>
</resources>